# jumia-marketplace

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
jumia/: ad.py  import_ads.py
tests/: test_ad_parser.py  test_import_ads.py
tests/fixtures/: car_ad_kia_pid14919888.html  job_ad.html  liste.html
