[tool.poetry]
name = "jumia-marketplace"
version = "0.1.0"
description = "extract raw information from jumia classified ads"
authors = ["Steve Jiekak <devaureshy@gmail.com>"]
license = "M.I.T"
readme = "README.md"
packages = [{include = "jumia"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "4.12.2"
unidecode = "1.3.6"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-cov = "4.1.0"
pytest-black = "0.3.12"
black = "23.7.0"
isort = "5.12.0"
pytest-isort = "3.1.0"
pytest-mypy = "0.10.3"
pytest-flake8 = "1.1.1"
types-beautifulsoup4 = "4.12.0.5"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
use_parentheses = false
force_single_line = true

[tool.pytest.ini_options]
markers = []

addopts = """
--doctest-modules
--tb short
--verbose
"""

testpaths = [
    "tests",
]